added new background position declarations

--- a/CSS/sass/global/_variables.scss
+++ b/CSS/sass/global/_variables.scss
@@ -1,4 +1,20 @@
 //IMAGES
+// individual pattern elements
+    $confetti-circle-blue: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/d8b73bc8807a453aba83e232a0a4141c.png';
+    $confetti-circle-green: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/23e3257a3c2142d1af4d19c1da82c4ba.png';
+    $confetti-circle-navy: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/baed31b0d88a4af6974c27353c7f25ee.png';
+    $confetti-circle-orange: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/5bb99aa83b3a4d379e517f1b3e2714f9.png';
+    $confetti-donut-blue: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/5ac3161571b44a1e88c164b981fe9430.png';
+    $confetti-square-blue: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/129ac17457534574a84797fab400e0c6.png';
+    $confetti-square-navy: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/72e5a3e805874d249774c45dc940b4fd.png';
+    $confetti-square-orange: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fec7794bff4d47649da8fb5b1a3040d3.png';
+    $confetti-square-white: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/44a9a59831f04baab31726a5b8deac25.png';
+    $confetti-triangle-blue: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b2ece878ac854db2a42028b6daadce67.png';
+    $ribbon-beige: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/9d154bf6015a4450b602b37a05f97cc6.png';
+    $ribbon-red: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/75daeb4c1b414141ba1aa921a904fc69.png';
+    $split-circle: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fd79abb2cf0a406490fdbb7467a1cd8f.png';
+    $triangle-navy: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/40569f2b1efd4866bfa187c71d6d8b31.png';
+    $triangle-orange: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/16bceec438674c939e40501f6f5dc6b8.png';
 
 // red background patterns
     $pattern-squiggles:        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6f6b7556d07045689f9e8286f782921d.png';
@@ -52,7 +68,8 @@
     $venue-renaissance:       'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6f516e73056049558d1207c375d796e8.jpg';
     $venue-hyatt:             'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6bddec41b5c24ca79b3b10b51a3d9460.jpg';
     $venue-hampton:           'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fc6166580de945cd9428e846d0ce2a52.jpg';
-    $accommodations-main:     '';
+    $venue-hilton:           'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b9746db285bc4098b37495c05d902a56.jpg';
+    $venue-residence-inn:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6ac1788205ec416fa73cc4f2ea0c3146.jpg';
     $venue-main-vert:         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/38d745131bb54f26b5c260f07cd38157.jpg';
     $venue-room:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c3889b97d2754a568dee08c6e4abce24.jpg';
     $venue-pool:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/52180804f62f4cf5b17f44a8be88e67b.jpg';
