--- a/CSS/sass/main.css
+++ b/CSS/sass/main.css
@@ -21,6 +21,10 @@ div.form-page .Spacer3 {
   display: none;
 }
 
+.summary.clear {
+  display: none;
+}
+
 #tblEnterConfirmation,
 .Line1 {
   display: block;
@@ -5945,7 +5949,7 @@ a.cta-button.outline:hover.white, a.cta-button.outline:hover.light-gray,
 }
 @media (min-width: 768px) {
   .agenda-bars .event-col span.event-title:nth-child(11) {
-    grid-column: 2/4;
+    grid-column: 1/3;
     grid-row: 11/12;
   }
 }
@@ -6649,7 +6653,7 @@ a.cta-button.outline:hover.white, a.cta-button.outline:hover.light-gray,
 }
 @media (min-width: 768px) {
   #home-page .agenda-bars .event-col span.event-title:nth-child(11) {
-    grid-column: 2/4;
+    grid-column: 1/3;
     grid-row: 11/12;
   }
 }
